--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ published: true
 ---
 <div class="home">
 	<section class="site-header">
-		<h1 class="smallcap"><a class="site-title" href="{{ site.baseurl }}/">{site.title}</a></h1>
+		<h1 class="smallcap"><a class="site-title" href="{{ site.baseurl }}/">{{site.title}}</a></h1>
 		{% include nav.html %}
 		{% include intro.html %}
 	</section>
