--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 published: true
 ---
 
-<link rel="shortcut icon" type="image/png" href="/basketball_PNG1101.png">
+<link rel="shortcut icon" type="image/png" href="basketball_PNG1101.png">
 <div class="home">
 	<section class="site-header">
 		<h1 class="smallcap"><a class="site-title" href="{{ site.baseurl }}/">{{site.title}}</a></h1>
