--- a/my-writings.html
+++ b/my-writings.html
@@ -3,7 +3,7 @@
 				<a href="/mywritings/black-suitcase.html">Black Suitcase (Letter to children)</a> 
 			</li>
       <li>
-				<a href="/mywritings/hole.md">Hole</a> 
+				<a href="/mywritings/hole.html">Hole</a> 
 			</li>
 
 		</ul>
